# repo_downloader

./: .gitignore  README.md  pyproject.toml
src/: downloader.py  main.py  parsers.py
tests/: conftest.py  constants.py  test_gitea_parser.py  test_github_parser.py  test_repo_downloader.py
tests/test_html_pages/: gitea_root_page.html  gitea_subfolder_page.html  github_root_page.html  github_subfolder_page.html
