[tool.poetry]
name = "repo-downloader"
version = "0.1.0"
description = ""
authors = ["Sergey Morichev <s.morichev@yandex.ru>"]
readme = "README.md"
packages = [{include = "repo_downloader"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.4"
beautifulsoup4 = "^4.12.0"
aiofiles = "^23.1.0"

[tool.poetry.group.dev.dependencies]
nitpick = "^0.32.0"
black = "^23.1.0"
isort = "^5.7.0"
pytest = "^7.2.0"
requests-cache = "0.9.7"
wemake-python-styleguide = "^0.17.0"
flake8-pytest-style = "^1.3.0"
flake8-SQL = "^0.4.1"
flake8-annotations = "^2.4.1"
flake8-logging-format = "^0.8.1"
flake8-spellcheck = "^0.28.0"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.5"
Faker = "^15.1.0"
pytest-snapshot = "^0.9.0"
coverage = "^7.2.2"
pytest-asyncio = "^0.21.0"

[tool.poetry.group.dev.dependencies.pytest-xdist]
extras = [ "psutil",]
version = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "./nitpick/all.toml"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = "test*.py"
addopts = "-rsxX -l --tb=short --strict-markers --doctest-modules"
xfail_strict = "true"


[tool.black]
line-length = 80
skip-string-normalization = true
